fixed footer spacing, odd margins on columns and text color on sorter

--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ table {
     margin-top: 0em;
 }
 
-.coffee > p {
-    display: inline-flex;
-}
+/*.coffee > p {*/
+/*    display: inline-flex;*/
+/*}*/
 #outside-border {
     background-color: white;
     border: 3px solid black;
@@ -48,11 +48,11 @@ table {
     height: 180px;
     width: 155px;
 }
-#name-style, #thank-you {
+.name-style, #thank-you {
     font-family: 'Bilbo Swash Caps';
     font-size: 2em;
 }
-#roast-style, h1, h2 {
+.roast-style, h1, h2 {
     font-family: 'Angkor';
 }
 h1 {
@@ -62,6 +62,7 @@ h1 {
     text-shadow: 2px 2px #000;
 }
 #add-coffee-head {
+    color: #FBBF18;
     font-size: 1.7em;
 }
 #left-column {
@@ -69,6 +70,20 @@ h1 {
     color: white;
     border: 2px solid #FBBF18;
 }
+#right-column {
+    column-count: 2;
+    /*border: 2px solid #000;*/
+}
 #thank-you {
     font-size: 1em;
+}
+.roast-style {
+    font-size: .7em;
+    color: darkgrey;
+}
+p {
+    margin: unset;
+}
+#outer-container {
+    padding: unset;
 }
